@@ -63,7 +63,7 @@
 		level if necessary. -->
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<targetJdk>1.7</targetJdk>
+		<targetJdk>1.8</targetJdk>
 		<org.springframework.version>3.2.14.RELEASE</org.springframework.version>
 		<org.hibernate.version>4.3.10.Final</org.hibernate.version>
 		<com.sun.jersey.version>1.17.1</com.sun.jersey.version>
@@ -1259,7 +1259,7 @@
 				<version>2.8.1</version>
 				<configuration>
 					<skipTests>${skipTests}</skipTests>
-					<argLine>-XX:MaxPermSize=128m -Xmx512m -Xms256m -Djava.awt.headless=true</argLine>
+					<argLine>-Xmx512m -Xms256m -Djava.awt.headless=true</argLine>
 					<systemPropertyVariables>
 						<java.io.tmpdir>${project.build.directory}/olatdata</java.io.tmpdir>
 					</systemPropertyVariables>
@@ -1312,14 +1312,14 @@
 		</plugins>
 		<pluginManagement>
 			<plugins>
-				<!-- OLAT requires JDK 1.7 or later ! -->
+				<!-- OLAT requires JDK 1.8 or later ! -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>2.5.1</version>
+					<version>3.3</version>
 					<configuration>
-						<source>1.7</source>
-						<target>1.7</target>
+						<source>1.8</source>
+						<target>1.8</target>
 						<encoding>UTF-8</encoding>
 					</configuration>
 				</plugin>
@@ -1327,7 +1327,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-war-plugin</artifactId>
-					<version>2.4</version>
+					<version>2.6</version>
 					<configuration>
 						<attachClasses>true</attachClasses>
 						<directory>src/main/java</directory>
@@ -1396,7 +1396,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-enforcer-plugin</artifactId>
-					<version>1.3.1</version>
+					<version>1.4</version>
 					<executions>
 						<execution>
 							<id>show-versions</id>
@@ -1416,7 +1416,7 @@
 										<version>2.2+</version>
 									</requireMavenVersion>
 									<requireJavaVersion>
-										<version>1.7+</version>
+										<version>1.8+</version>
 									</requireJavaVersion>
 								</rules>
 							</configuration>
